--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "node": ">=18.x"
   },
   "scripts": {
-    "start": "node app.ts",
-    "register": "node commands.ts",
-    "dev": "nodemon app.ts"
+    "dev": "tsx watch src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsup src/index.ts --minify"
   },
   "keywords": [
     "discord",
@@ -25,14 +25,14 @@
   "author": "Adrian Szarapow",
   "license": "MIT",
   "dependencies": {
-    "discord-api-types": "^0.38.21",
-    "discord-interactions": "^4.3.0",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "discord.js": "^14.22.0",
+    "dotenv": "^17.2.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.3.0",
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.33.0",
+    "eslint": "^9.33.0",
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.4",
+    "typescript": "^5.9.2"
   }
 }
